1.2.8.dev0
 * Include link to issue tracker within various command output.
 * Run continuous integration tests on a matrix of Python and Borg versions.

1.2.7
 * #98: Support for Borg --keep-secondly prune option.
 * Use Black code formatter and Flake8 code checker as part of running automated tests.
 * Add an end-to-end automated test that actually integrates with Borg.
 * Set up continuous integration for borgmatic automated tests on projects.evoworx.org.

1.2.6
 * Fix generated configuration to also include a "keep_daily" value so pruning works out of the
   box.

1.2.5
 * #57: When generating sample configuration with generate-borgmatic-config, comment out all
   optional configuration so as to streamline the initial configuration process.

1.2.4
 * Fix for archive checking traceback due to parameter mismatch.

1.2.3
 * #64, #90, #92: Rewrite of logging system. Now verbosity flags passed to Borg are derived from
   borgmatic's log level. Note that the output of borgmatic might slightly change.
 * Part of #80: Support for Borg create --read-special via "read_special" option in borgmatic's
   location configuration.
 * #87: Support for Borg create --checkpoint-interval via "checkpoint_interval" option in
   borgmatic's storage configuration.
 * #88: Fix declared pykwalify compatibility version range in setup.py to prevent use of ancient
   versions of pykwalify with large version numbers.
 * #89: Pass --show-rc option to Borg when at highest verbosity level.
 * #94: Support for Borg --json option via borgmatic command-line to --create archives.

1.2.2
 * #85: Fix compatibility issue between pykwalify and ruamel.yaml 0.15.52, which manifested in
   borgmatic as a pykwalify RuleError.

1.2.1
 * Skip before/after backup hooks when only doing --prune, --check, --list, and/or --info.
 * #71: Support for XDG_CONFIG_HOME environment variable for specifying alternate user ~/.config/
   path.